Add new time complexity examples

--- a/tut03/Makefile
+++ b/tut03/Makefile
@@ -2,10 +2,10 @@ CC = clang
 CFLAGS = -Wall -Werror -g -fsanitize=address,undefined
 
 .PHONY: all
-all: palindrome twosum polynomial permutation
+all: examples twosum polynomial permutation
 
-palindrome: palindrome.c
-	$(CC) $(CFLAGS) -o palindrome palindrome.c
+examples: examples.c
+	$(CC) $(CFLAGS) -o examples examples.c
 
 twosum: twosum.c
 	$(CC) $(CFLAGS) -o twosum twosum.c
@@ -18,4 +18,4 @@ permutation: permutation.c
 
 .PHONY: clean
 clean:
-	rm palindrome twosum polynomial permutation
+	rm examples twosum polynomial permutation
