--- a/tut03/Makefile
+++ b/tut03/Makefile
@@ -2,13 +2,7 @@ CC = clang
 CFLAGS = -Wall -Werror -g -fsanitize=address,undefined
 
 .PHONY: all
-all: examples twosum polynomial permutation
-
-examples: examples.c
-	$(CC) $(CFLAGS) -o examples examples.c
-
-twosum: twosum.c
-	$(CC) $(CFLAGS) -o twosum twosum.c
+all: polynomial permutation
 
 polynomial: polynomial.c
 	$(CC) $(CFLAGS) -lm -o polynomial polynomial.c
