update tut04 for 23t3

--- a/tut04/Makefile
+++ b/tut04/Makefile
@@ -2,14 +2,15 @@ CC = clang
 CFLAGS = -Wall -Werror -g -fsanitize=address,undefined
 
 .PHONY: all
-all: runList runBST
+all: runBST occurences
 
-runList: runList.c List.h List.c
-	$(CC) $(CFLAGS) -o runList runList.c List.c
+runBST: runBST.c BST.h BST.c
+	$(CC) $(CFLAGS) -o runBST runBST.c BST.c
 
-runBST: runBST.c BSTree.h BSTree.c
-	$(CC) $(CFLAGS) -o runBST runBST.c BSTree.c
+
+occurences: occurences.c Set.h Set.c
+	$(CC) $(CFLAGS) -o occurences occurences.c Set.c
 
 .PHONY: clean
 clean:
-	rm runList runBST
+	rm -rf *.dSYM runBST occurences
