--- a/tut02/Makefile
+++ b/tut02/Makefile
@@ -2,7 +2,7 @@ CC = clang
 CFLAGS = -Wall -Werror -g -fsanitize=address,undefined
 
 .PHONY: all
-all: list listContainer examples twosum palindrome
+all: list listContainer examples
 
 list: list.c
 	$(CC) $(CFLAGS) -o list list.c
@@ -12,12 +12,6 @@ listContainer: listContainer.c
 
 examples: examples.c
 	$(CC) $(CFLAGS) -o examples examples.c
-
-twosum: twosum.c
-	$(CC) $(CFLAGS) -o twosum twosum.c
-
-palindrome: palindrome.c
-	$(CC) $(CFLAGS) -o palindrome palindrome.c
 
 .PHONY: clean
 clean:
