--- a/tut10/Makefile
+++ b/tut10/Makefile
@@ -2,10 +2,7 @@ CC = clang
 CFLAGS = -Wall -Werror -g -fsanitize=address,leak,undefined
 
 .PHONY: all
-all: kLargest hash
+all: kLargest
 
 kLargest: kLargest.c PQ.h PQ.c
 	$(CC) $(CFLAGS) -o kLargest kLargest.c PQ.c
-
-hash: hash.c
-	$(CC) $(CFLAGS) -o hash hash.c
