change complexity examples

--- a/tut02/Makefile
+++ b/tut02/Makefile
@@ -2,7 +2,7 @@ CC = clang
 CFLAGS = -Wall -Werror -g -fsanitize=address,undefined
 
 .PHONY: all
-all: list listContainer examples
+all: list listContainer complexity
 
 list: list.c
 	$(CC) $(CFLAGS) -o list list.c
@@ -10,9 +10,9 @@ list: list.c
 listContainer: listContainer.c
 	$(CC) $(CFLAGS) -o listContainer listContainer.c
 
-examples: examples.c
-	$(CC) $(CFLAGS) -o examples examples.c
+complexity: complexity.c
+	$(CC) $(CFLAGS) -o complexity complexity.c
 
 .PHONY: clean
 clean:
-	rm -rf *.dSYM *.o list listContainer examples twosum palindrome
+	rm -rf *.dSYM *.o list listContainer complexity twosum palindrome
