Update bst starter code to be lowercase

--- a/tut04/Makefile
+++ b/tut04/Makefile
@@ -2,11 +2,11 @@ CC = clang
 CFLAGS = -Wall -Werror -g -fsanitize=address,undefined
 
 .PHONY: all
-all: runBST
+all: runBst
 
-runBST: runBST.c BST.h BST.c
-	$(CC) $(CFLAGS) -o runBST runBST.c BST.c
+runBst: runBst.c bst.h bst.c
+	$(CC) $(CFLAGS) -o runBst runBst.c BST.c
 
 .PHONY: clean
 clean:
-	rm -rf *.dSYM runBST occurences
+	rm -rf *.dSYM runBst occurences
